--- a/src/assets/stylesheets/_variables.scss
+++ b/src/assets/stylesheets/_variables.scss
@@ -12,6 +12,7 @@ $dark-gray: #323A45;
 $nav-width: 840px;
 $default-feature: min-width;
 
-$small-screen:  540px !default;
-$medium-screen: 620px !default;
+$xsmall-screen: 320px !default;
+$small-screen:  481px !default;
+$medium-screen: 768px !default;
 $large-screen:  1201px !default;
